fix: overflow deleted

--- a/shelter/sass/components/_friends.scss
+++ b/shelter/sass/components/_friends.scss
@@ -53,7 +53,6 @@
     overflow: hidden;
     gap: 0 90px;
     position: relative;
-    left: -100%;
     @include media-tablet {
         max-width: 580px;
         overflow: hidden;
